# agent-naoko

./: .gitignore  DESIGN.md  README.md  history.md  pyproject.toml  requirements.txt
docs/: sample_project_plan.md
naoko.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
naoko_core/: auth.py  main.py  orchestrator.py
naoko_core/agents/: codex_client.py  gemini_client.py
naoko_core/io/: code_navigator.py  doc_parser.py  git_ops.py
skills/naoko/: SKILL.md
src/main/java/com/example/: User.java
